--- a/package.json
+++ b/package.json
@@ -9,14 +9,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/iconify": "^2.2.1",
+    "antd": "^4.22.7",
+    "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "echarts": "^5.3.3",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-windicss": "^1.8.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@iconify/json": "^2.1.96",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^18.7.9",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@unocss/preset-attributify": "^0.45.9",
+    "@unocss/preset-icons": "^0.45.9",
+    "@unocss/preset-uno": "^0.45.9",
     "@vitejs/plugin-react": "^2.0.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.22.0",
+    "husky": "^8.0.1",
+    "less": "^4.1.3",
     "typescript": "^4.6.4",
-    "vite": "^3.0.6"
+    "unocss": "^0.45.9",
+    "vite": "^3.0.6",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-purge-icons": "^0.9.0",
+    "vite-plugin-style-import": "^2.0.0",
+    "vitest": "^0.22.1",
+    "windicss-analysis": "^0.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
