--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "my-vue-app",
+  "name": "react-admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "vite-plugin-windicss": "^1.8.7"
   },
   "devDependencies": {
@@ -28,12 +30,15 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "@unocss/preset-attributify": "^0.45.9",
     "@unocss/preset-icons": "^0.45.9",
     "@unocss/preset-uno": "^0.45.9",
     "@vitejs/plugin-react": "^2.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
+    "eslint-plugin-react": "^7.31.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "typescript": "^4.6.4",
