--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "#/*": ["types/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "build"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
