--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@iconify/iconify": "^2.2.1",
+    "@reduxjs/toolkit": "^1.8.5",
     "antd": "^4.22.7",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
@@ -18,6 +20,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "vite-plugin-windicss": "^1.8.7"
   },
