--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "unocss": "^0.45.9",
     "vite": "^3.0.6",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-style-import": "^2.0.0",
     "vitest": "^0.22.1"
