--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "vite-plugin-windicss": "^1.8.7"
