--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^5.3.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-data-grid": "7.0.0-canary.49",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
