--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "echarts": "^5.3.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-data-grid": "7.0.0-canary.49",
+    "react-data-grid": "7.0.0-beta.18",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.3.0",
     "vite-plugin-windicss": "^1.8.7"
   },
@@ -35,6 +36,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-resizable": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@unocss/preset-attributify": "^0.45.9",
