--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "echarts": "^5.3.3",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-data-grid": "7.0.0-beta.18",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
@@ -32,6 +32,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify/react": "^3.2.2",
     "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^18.7.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.17",
