--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.5",
     "ahooks": "^3.7.1",
-    "antd": "^4.23.2",
+    "antd": "^4.23.4",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
@@ -31,6 +32,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify/react": "^3.2.2",
+    "@remix-run/router": "^1.0.2",
     "@types/crypto-js": "^4.1.1",
     "@types/lodash": "^4.14.185",
     "@types/node": "^18.7.9",
@@ -48,6 +50,7 @@
     "eslint-plugin-react": "^7.31.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
+    "rollup-plugin-visualizer": "^5.8.2",
     "typescript": "^4.6.4",
     "unocss": "^0.45.9",
     "vite": "^3.0.6",
