--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "antd": "^4.23.4",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
-    "dayjs": "^1.11.5",
     "echarts": "^5.3.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.31.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
+    "rc-picker": "^2.6.10",
     "rollup-plugin-visualizer": "^5.8.2",
     "typescript": "^4.6.4",
     "unocss": "^0.45.9",
