--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@wangeditor/editor": "^5.1.21",
+    "@wangeditor/editor-for-react": "^1.0.5",
     "ahooks": "^3.7.1",
     "antd": "^4.23.4",
     "axios": "^0.27.2",
@@ -26,6 +28,8 @@
     "react-redux": "^8.0.2",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.3.0",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.7",
     "vite-plugin-windicss": "^1.8.7"
   },
   "devDependencies": {
@@ -40,6 +44,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-resizable": "^3.0.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@unocss/preset-attributify": "^0.45.9",
