--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -136,6 +136,6 @@
         "@typescript-eslint/no-non-null-assertion": "warn",
         // 官方hooks校验
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "react-hooks/exhaustive-deps": "error"
     }
 }
