--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,11 @@
         "@typescript-eslint",
         "react-hooks"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
         "no-var": "error",
         // "prettier/prettier": "error",
