wip: 升级antd5.0处理

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@wangeditor/editor": "^5.1.21",
     "@wangeditor/editor-for-react": "^1.0.5",
     "ahooks": "^3.7.1",
-    "antd": "^4.24.2",
+    "antd": "^5.0.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.6",
     "echarts": "^5.3.3",
-    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-activation": "^0.12.0",
+    "react-activation": "^0.12.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
