--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@wangeditor/editor": "^5.1.21",
     "@wangeditor/editor-for-react": "^1.0.5",
     "ahooks": "^3.7.1",
-    "antd": "^5.0.0",
+    "antd": "5.0.1",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
@@ -29,8 +29,7 @@
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.3.0",
     "react-virtualized-auto-sizer": "^1.0.7",
-    "react-window": "^1.8.7",
-    "vite-plugin-windicss": "^1.8.7"
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -60,11 +59,11 @@
     "rollup-plugin-visualizer": "^5.8.2",
     "typescript": "^4.6.4",
     "unocss": "^0.45.9",
-    "vite": "^3.0.6",
+    "vite": "3.2.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
-    "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-windicss": "^1.8.8",
     "vitest": "^0.22.1"
   },
   "husky": {
