--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{jsx,tstsx,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -55,8 +56,17 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
+    "postcss": "^8.4.19",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "rc-picker": "^2.6.10",
     "rollup-plugin-visualizer": "^5.8.2",
+    "stylelint": "^14.15.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-recommended-less": "^1.0.4",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "^4.6.4",
     "unocss": "^0.45.9",
     "vite": "3.2.4",
