--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "cross-env NODE_ENV=test vitest",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{jsx,tstsx,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "preview": "vite preview"
@@ -38,6 +39,9 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify/react": "^3.2.2",
     "@remix-run/router": "^1.0.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.7.9",
     "@types/nprogress": "^0.2.0",
@@ -56,6 +60,7 @@
     "eslint-plugin-react": "^7.31.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "jsdom": "^20.0.3",
     "less": "^4.1.3",
     "postcss": "^8.4.19",
     "postcss-html": "^1.5.0",
@@ -75,7 +80,7 @@
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-windicss": "^1.8.8",
-    "vitest": "^0.22.1"
+    "vitest": "^0.25.3"
   },
   "husky": {
     "hooks": {
