--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.7.9",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-resizable": "^3.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
@@ -54,7 +54,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@unocss/preset-attributify": "^0.45.9",
     "@unocss/preset-icons": "^0.45.9",
-    "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.31.0",
@@ -73,9 +73,9 @@
     "stylelint-config-recommended-less": "^1.0.4",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.3",
     "unocss": "^0.45.9",
-    "vite": "3.2.4",
+    "vite": "^4.0.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
