--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
     "echarts": "^5.3.3",
+    "echarts-liquidfill": "^3.1.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-activation": "^0.12.2",
