fix: 虚拟滚动失效

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,9 @@
     "reduxjs",
     "Appstore",
     "ahooks",
-    "brotliSize"
+    "brotliSize",
+    "wangeditor",
+    "stylelint",
+    "liquidfill"
   ]
 }
