--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@wangeditor/editor": "^5.1.21",
     "@wangeditor/editor-for-react": "^1.0.5",
     "ahooks": "^3.7.1",
-    "antd": "5.1.0",
+    "antd": "5.1.2",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
     "echarts": "^5.3.3",
     "echarts-liquidfill": "^3.1.0",
     "nprogress": "^0.2.0",
+    "rc-resize-observer": "^1.2.1",
     "react": "^18.2.0",
     "react-activation": "^0.12.2",
     "react-dom": "^18.2.0",
@@ -76,7 +77,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "^4.9.3",
     "unocss": "^0.45.9",
-    "vite": "^4.0.0",
+    "vite": "^4.0.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
