feat: 图片压缩和打包时间

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,12 @@
     "brotliSize",
     "wangeditor",
     "stylelint",
-    "liquidfill"
+    "liquidfill",
+    "micromessenger",
+    "crossorigin",
+    "gifsicle",
+    "optipng",
+    "mozjpeg",
+    "pngquant",
   ]
 }
