--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-activation": "^0.12.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.3.0",
     "react-virtualized-auto-sizer": "^1.0.7",
@@ -79,6 +79,7 @@
     "unocss": "^0.45.9",
     "vite": "^4.0.4",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-windicss": "^1.8.8",
