--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "rc-picker": "^2.6.10",
+    "rollup-plugin-external-globals": "^0.7.1",
     "rollup-plugin-visualizer": "^5.8.2",
     "stylelint": "^14.15.0",
     "stylelint-config-prettier": "^9.0.4",
@@ -79,7 +80,6 @@
     "unocss": "^0.45.9",
     "vite": "^4.0.4",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-windicss": "^1.8.8",
