--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.5.6",
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@wangeditor/editor": "^5.1.21",
     "@wangeditor/editor-for-react": "^1.0.5",
     "ahooks": "^3.7.1",
-    "antd": "5.1.2",
+    "antd": "^5.1.6",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
@@ -32,7 +33,7 @@
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
     "react-resizable": "^3.0.4",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6.7.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7"
   },
