--- a/package.json
+++ b/package.json
@@ -45,12 +45,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
-    "@types/imagemin": "^8.0.0",
-    "@types/imagemin-gifsicle": "^7.0.1",
-    "@types/imagemin-mozjpeg": "^8.0.1",
-    "@types/imagemin-optipng": "^5.2.1",
-    "@types/imagemin-pngquant": "^8.0.0",
-    "@types/imagemin-svgo": "^10.0.2",
     "@types/node": "^18.7.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
@@ -69,12 +63,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "globby": "^13.1.3",
     "husky": "^8.0.1",
-    "imagemin": "^8.0.1",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-pngquant": "^9.0.2",
-    "imagemin-svgo": "^10.0.1",
     "jsdom": "^20.0.3",
     "less": "^4.1.3",
     "postcss": "^8.4.19",
@@ -91,6 +79,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "^4.9.3",
     "unocss": "^0.45.9",
+    "unplugin-imagemin": "^0.3.12",
     "vite": "^4.0.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
