perf: 兼容低版本

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@unocss/preset-attributify": "^0.45.9",
     "@unocss/preset-icons": "^0.45.9",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
@@ -81,8 +82,6 @@
     "unocss": "^0.45.9",
     "vite": "^4.0.4",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-optimize-persist": "^0.1.2",
-    "vite-plugin-package-config": "^0.1.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-windicss": "^1.8.8",
