--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@unocss/preset-attributify": "^0.45.9",
     "@unocss/preset-icons": "^0.45.9",
     "@vitejs/plugin-legacy": "^4.0.2",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.31.0",
@@ -80,7 +80,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "^4.9.3",
     "unocss": "^0.45.9",
-    "vite": "^4.0.4",
+    "vite": "^4.2.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
