--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "^4.9.3",
     "unocss": "^0.45.9",
-    "vite": "^4.3.0-beta.6",
+    "vite": "^4.3.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pages": "^0.26.0",
     "vite-plugin-purge-icons": "^0.9.0",
