--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.2.1",
     "react": "^18.2.0",
-    "react-activation": "^0.12.2",
+    "react-activation": "0.12.4",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
@@ -40,11 +40,13 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@iconify/react": "^3.2.2",
+    "@loadable/component": "^5.15.3",
     "@remix-run/router": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^18.7.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
@@ -82,7 +84,6 @@
     "unocss": "^0.45.9",
     "vite": "^4.3.9",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-pages": "^0.30.1",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-windicss": "^1.8.8",
     "vitest": "^0.25.3"
