--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "test": "cross-env NODE_ENV=test vitest",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{jsx,tsx,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "preview": "vite preview"
@@ -42,9 +41,6 @@
     "@iconify/react": "^3.2.2",
     "@loadable/component": "^5.15.3",
     "@remix-run/router": "^1.0.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^18.7.9",
@@ -85,8 +81,7 @@
     "vite": "^4.4.7",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-purge-icons": "^0.9.0",
-    "vite-plugin-windicss": "^1.8.8",
-    "vitest": "^0.25.3"
+    "vite-plugin-windicss": "^1.8.8"
   },
   "husky": {
     "hooks": {
