--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "#/*": ["types/*"]
     }
   },
-  "include": ["src", "tests"],
+  "include": ["src"],
   "exclude": ["dist", "node_modules", "cypress"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
