feat: 首页国际化

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "antfu.iconify",
     "voorjaar.windicss-intellisense",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "lokalise.i18n-ally"
   ]
 }
