--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
   "editor.tabSize": 2,
   "eslint.validate": ["typescript"],
+  "i18n-ally.namespace": true,
+  "i18n-ally.sourceLanguage": "en",
+  "i18n-ally.displayLanguage": "zh",
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.localesPaths": "src/locales",
+  "i18n-ally.enabledParsers": ["yaml", "ts", "js", "json"],
+  "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
+  "i18n-ally.enabledFrameworks": [
+    "react-i18next"
+  ],
   "cSpell.words": [
     "vite",
     "windi",
@@ -45,6 +55,8 @@
     "YouSheBiaoTiHei",
     "zlevel",
     "majesticons",
-    "Unactivate"
+    "Unactivate",
+    "languagedetector",
+    "locize"
   ]
 }
