--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
     "echarts": "^5.3.3",
+    "i18next": "^23.4.4",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-xhr-backend": "^3.2.2",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.2.1",
     "react": "^18.2.0",
     "react-activation": "0.12.4",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-i18next": "^13.1.2",
     "react-redux": "^8.0.5",
     "react-resizable": "^3.0.4",
     "react-router-dom": "6.7.0",
