--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "echarts": "^5.3.3",
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-xhr-backend": "^3.2.2",
+    "i18next-http-backend": "^2.2.2",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.2.1",
     "react": "^18.2.0",
