--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "stylelint-config-recommended-less": "^1.0.4",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
+    "terser": "^5.19.4",
     "typescript": "^4.9.3",
     "unocss": "^0.45.9",
     "vite": "^4.4.7",
