--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ VITE_ENV = "development"
 VITE_SERVER_PORT = 7000
 
 # 跨域
-VITE_PROXY = [["/api", "https://www.fastmock.site/mock/bdd0efa89c5ddba1b003043010702b77/v1"]]
+VITE_PROXY = [["/api", "https://mock.mengxuegu.com/mock/63f830b1c5a76a117cab185e/v1"]]
