feat: API下拉框自定义key值

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.displayLanguage": "zh",
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": "src/locales",
+  "i18n-ally.localesPaths": [
+    "src/locales"
+  ],
   "i18n-ally.enabledParsers": ["yaml", "ts", "js", "json"],
   "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
   "i18n-ally.enabledFrameworks": [
