--- a/package.json
+++ b/package.json
@@ -51,21 +51,22 @@
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.2.77",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@types/react-resizable": "^3.0.7",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/react-window": "^1.8.8",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@unocss/preset-attributify": "^0.59.2",
     "@unocss/preset-icons": "^0.59.2",
     "@vitejs/plugin-legacy": "^5.3.2",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "globby": "^14.0.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
@@ -83,9 +84,9 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
     "terser": "^5.30.3",
-    "typescript": "^5.4.5",
+    "typescript": "^5.2.2",
     "unocss": "^0.59.2",
-    "vite": "^5.2.8",
+    "vite": "^5.2.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-purge-icons": "^0.10.0",
     "vite-plugin-windicss": "^1.9.3"
