--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@unocss/preset-attributify": "^0.59.2",
     "@unocss/preset-icons": "^0.59.2",
     "@vitejs/plugin-legacy": "^5.3.2",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
