--- a/package.json
+++ b/package.json
@@ -56,16 +56,17 @@
     "@types/react-resizable": "^3.0.7",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/react-window": "^1.8.8",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@unocss/preset-attributify": "^0.59.2",
     "@unocss/preset-icons": "^0.59.2",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "globby": "^14.0.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
