feat: 文字省略组件

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "antfu.iconify",
     "voorjaar.windicss-intellisense",
     "streetsidesoftware.code-spell-checker",
-    "lokalise.i18n-ally"
+    "lokalise.i18n-ally",
+    "editorconfig.editorconfig"
   ]
 }
