--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,6 @@
     "camelcase",
     "parens",
     "paren",
-    "reduxjs",
     "Appstore",
     "ahooks",
     "brotliSize",
@@ -59,6 +58,7 @@
     "majesticons",
     "Unactivate",
     "languagedetector",
-    "locize"
+    "locize",
+    "zustand",
   ]
 }
