--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.19.1",
     "@ant-design/icons": "^5.3.6",
-    "@reduxjs/toolkit": "^2.2.3",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-react": "^1.0.6",
     "ahooks": "^3.7.11",
@@ -35,11 +34,11 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
-    "react-redux": "^9.1.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "6.22.3",
     "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
