--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.19.1",
     "@ant-design/icons": "^5.3.6",
+    "@south/message": "workspace:^",
+    "@south/request": "workspace:^",
+    "@south/utils": "workspace:^",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-react": "^1.0.6",
     "ahooks": "^3.7.11",
     "antd": "^5.20.2",
     "axios": "^1.6.8",
-    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
     "i18next": "^23.11.1",
@@ -46,7 +48,6 @@
     "@iconify/react": "^4.1.1",
     "@loadable/component": "^5.16.3",
     "@remix-run/router": "^1.15.3",
-    "@types/crypto-js": "^4.2.2",
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
