--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^5.3.6",
     "@south/message": "workspace:^",
     "@south/request": "workspace:^",
+    "@south/table": "workspace:^",
     "@south/utils": "workspace:^",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-react": "^1.0.6",
@@ -36,7 +37,6 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
-    "react-resizable": "^3.0.5",
     "react-router-dom": "6.22.3",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
