--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/cssinjs": "^1.19.1",
     "@ant-design/icons": "^5.3.6",
     "@south/message": "workspace:^",
+    "@south/modal": "workspace:^",
     "@south/request": "workspace:^",
     "@south/table": "workspace:^",
     "@south/utils": "workspace:^",
@@ -35,7 +36,6 @@
     "react": "^18.3.1",
     "react-activation": "0.12.4",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
     "react-router-dom": "6.22.3",
     "react-virtualized-auto-sizer": "^1.0.24",
