--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:test": "tsc && vite build --mode test",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{jsx,tsx,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.19.1",
@@ -51,6 +52,7 @@
     "@iconify/react": "^4.1.1",
     "@loadable/component": "^5.16.3",
     "@remix-run/router": "^1.15.3",
+    "@stylistic/stylelint-plugin": "^3.1.0",
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
@@ -77,15 +79,18 @@
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
+    "prettier": "^3.3.3",
     "rc-picker": "^4.3.2",
     "rollup-plugin-external-globals": "^0.10.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "stylelint": "^16.3.1",
-    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-less": "^3.0.1",
     "stylelint-config-standard": "^36.0.0",
+    "stylelint-less": "^3.0.1",
     "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.2",
     "terser": "^5.30.3",
     "typescript": "^5.4.5",
     "unocss": "^0.59.2",
