refactor: 减少过多monorepo迁移

--- a/package.json
+++ b/package.json
@@ -17,13 +17,8 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.19.1",
     "@ant-design/icons": "^5.3.6",
-    "@south/date-picker": "workspace:^",
-    "@south/form": "workspace:^",
     "@south/message": "workspace:^",
-    "@south/modal": "workspace:^",
     "@south/request": "workspace:^",
-    "@south/selects": "workspace:^",
-    "@south/table": "workspace:^",
     "@south/utils": "workspace:^",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-react": "^1.0.6",
@@ -40,7 +35,9 @@
     "react": "^18.3.1",
     "react-activation": "0.12.4",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "6.22.3",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
