--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "tsc && vite build --mode dev",
     "build:test": "tsc && vite build --mode test",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
-    "lint:stylelint": "stylelint --cache --fix \"**/*.{jsx,tsx,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -49,7 +49,7 @@
     "@iconify/react": "^4.1.1",
     "@loadable/component": "^5.16.3",
     "@remix-run/router": "^1.15.3",
-    "@stylistic/stylelint-plugin": "^3.1.0",
+    "@south/stylelint": "workspace:^",
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
@@ -73,21 +73,11 @@
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
-    "postcss": "^8.4.38",
-    "postcss-html": "^1.6.0",
-    "postcss-less": "^6.0.0",
     "prettier": "^3.3.3",
     "rc-picker": "^4.3.2",
     "rollup-plugin-external-globals": "^0.10.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "stylelint": "^16.3.1",
-    "stylelint-config-recess-order": "^5.1.1",
-    "stylelint-config-recommended": "^14.0.0",
-    "stylelint-config-recommended-less": "^3.0.1",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-less": "^3.0.1",
-    "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.2",
     "terser": "^5.30.3",
     "typescript": "^5.4.5",
     "unocss": "^0.59.2",
