--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
+    "prettier": "^3.3.3",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-less": "^3.0.1",
