refactor: keepalive库替换keepalive-for-react

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "i18next": "^23.11.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
+    "keepalive-for-react": "^2.0.18",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.0",
     "react": "^18.3.1",
-    "react-activation": "0.12.4",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
