--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "keepalive-for-react": "^2.0.18",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
     "react-resizable": "^3.0.5",
