--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
     "keepalive-for-react": "^2.0.18",
+    "loadsh": "^0.0.4",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.0",
     "react": "18.2.0",
@@ -51,6 +52,7 @@
     "@remix-run/router": "^1.15.3",
     "@south/stylelint": "workspace:^",
     "@types/loadable__component": "^5.13.9",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.77",
