--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
     "keepalive-for-react": "^2.0.18",
-    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.0",
     "react": "18.2.0",
