perf: 添加多跨域demo

--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ VITE_ENV = "development"
 VITE_SERVER_PORT = 7000
 
 # 跨域
-VITE_PROXY = [["/api", "https://mock.mengxuegu.com/mock/63f830b1c5a76a117cab185e/v1"]]
+VITE_PROXY = [["/api", "https://mock.mengxuegu.com/mock/63f830b1c5a76a117cab185e/v1"], ["/test", "https://www.baidu.com"]]
