--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^5.6.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@south/message": "workspace:^",
     "@south/request": "workspace:^",
     "@south/utils": "workspace:^",
@@ -34,9 +35,8 @@
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-draggable": "^4.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "7.2.0",
