chore: 添加react-draggable

--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-draggable": "^4.4.6",
     "react-i18next": "^15.4.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "7.2.0",
