--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "globby": "^14.1.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
@@ -82,6 +83,7 @@
     "stylelint": "^16.14.1",
     "terser": "^5.39.0",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.26.1",
     "unocss": "^66.0.0",
     "vite": "^6.2.0",
     "vite-plugin-compression": "^0.5.1",
