--- a/package.json
+++ b/package.json
@@ -16,76 +16,76 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.23.0",
-    "@ant-design/icons": "^5.6.1",
+    "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@south/message": "workspace:^",
     "@south/request": "workspace:^",
     "@south/utils": "workspace:^",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-react": "^1.0.6",
-    "antd": "^5.24.2",
-    "axios": "^1.7.9",
+    "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
-    "i18next": "^24.2.2",
+    "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
-    "keepalive-for-react": "^4.0.0",
+    "keepalive-for-react": "^4.0.2",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^15.4.1",
     "react-resizable": "^3.0.5",
-    "react-router-dom": "7.2.0",
-    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-router-dom": "7.4.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@iconify/react": "^5.2.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@iconify/react": "^5.2.1",
     "@loadable/component": "^5.16.4",
-    "@remix-run/router": "^1.22.0",
+    "@remix-run/router": "^1.23.0",
     "@south/stylelint": "workspace:^",
     "@types/loadable__component": "^5.13.9",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "^22.13.5",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.14.0",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@types/react-resizable": "^3.0.8",
-    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-virtualized-auto-sizer": "^1.0.8",
     "@types/react-window": "^1.8.8",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
-    "@unocss/preset-attributify": "^66.0.0",
-    "@unocss/preset-icons": "^66.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "@unocss/preset-attributify": "66.1.0-beta.8",
+    "@unocss/preset-icons": "66.1.0-beta.8",
     "@vitejs/plugin-legacy": "^6.0.2",
-    "@vitejs/plugin-react-swc": "^3.8.0",
+    "@vitejs/plugin-react-swc": "^3.8.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "globby": "^14.1.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "less": "^4.2.2",
-    "rc-picker": "^4.11.2",
+    "rc-picker": "^4.11.3",
     "rollup-plugin-external-globals": "^0.13.0",
     "rollup-plugin-visualizer": "^5.14.0",
-    "stylelint": "^16.14.1",
+    "stylelint": "^16.17.0",
     "terser": "^5.39.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.26.1",
-    "unocss": "^66.0.0",
-    "vite": "^6.2.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0",
+    "unocss": "66.1.0-beta.8",
+    "vite": "^6.2.5",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-purge-icons": "^0.10.0",
     "vite-plugin-windicss": "^1.9.4"
