chore: keepalive改为react-activation

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
-    "keepalive-for-react": "^4.0.2",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "rc-resize-observer": "^1.4.3",
     "react": "^19.1.0",
+    "react-activation": "^0.13.0",
     "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-i18next": "^15.4.1",
