--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0",
     "unocss": "66.1.0-beta.8",
+    "unplugin-auto-import": "^19.1.2",
     "vite": "^6.2.5",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-purge-icons": "^0.10.0",
