chore: 好物分享Error Lens

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "voorjaar.windicss-intellisense",
     "streetsidesoftware.code-spell-checker",
     "lokalise.i18n-ally",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "usernamehw.errorlens"
   ]
 }
